--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -28,3 +28,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Run make
         run: make
+      - name: Run binary
+        run: ./hello
